# sdl-mcp

./: .eslintrc.json  .gitattributes  .gitignore  .ignore  .tmp-http-codemode-test.kuzu  .tmp-http-codemode-test.kuzu.wal  .tmp-http-codemode-test2.kuzu  .tmp-http-transport-test.kuzu  AGENTS.md  CHANGELOG.md  CIActionsOptimization.md  CLAUDE.md  CODEX.md  COMMERCIAL_LICENSE.md  CONTEXT.md  Fix_Plan_Live_Editor-Buffer_Indexin.md  GEMINI.md  LICENSE  OPENCODE.md  PLUGIN_SDK_IMPLEMENTATION.md  README.md  RELEASETEST.md  SDL.md  TASKS.md  TESTING.md  V06-10_IMPLEMENTATION_SUMMARY.md  V06-11_VALIDATION_REPORT.md  V06-6_IMPLEMENTATION_SUMMARY.md  add_slice_handles.sql  benchmark-real-after2.json  benchmark-real.json  benchmark-synthetic-after2.json  benchmark-synthetic.json  claude-code-mcp-config.json  codex-mcp-config.json  debug-wrapper.js  eslint.config.mjs  fix-ladybug.cjs  opencode-mcp-config.json  package-lock.json  (+20 more)
native/: AGENTS.md  Cargo.toml  build.rs  index.d.ts  index.js  package.json
native/npm/darwin-arm64/: package.json
native/npm/darwin-x64/: package.json
native/npm/linux-arm64-gnu/: package.json
native/npm/linux-x64-gnu/: package.json
native/npm/linux-x64-musl/: package.json
native/npm/win32-x64-msvc/: package.json
native/src/: error.rs  layout.rs  lib.rs  scanner.rs  types.rs  windows_loader.rs
native/src/cluster/: lpa.rs  mod.rs  types.rs
native/src/extract/: calls.rs  fingerprint.rs  imports.rs  invariants.rs  mod.rs  roles.rs  search_text.rs  side_effects.rs  summary.rs  symbol_id.rs  symbols.rs
native/src/lang/: mod.rs
src/: main.ts  (+1 more)
(+2301 files in other folders)
