[package]
name = "sdl-mcp-native"
version = "0.1.0"
edition = "2021"
description = "Native Rust indexer for SDL-MCP with tree-sitter parsing and Rayon parallelism"
license = "SEE LICENSE IN LICENSE"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2", default-features = false, features = ["napi8", "serde-json"] }
napi-derive = "2"
tree-sitter = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-python = "0.23"
tree-sitter-go = "0.23"
tree-sitter-java = "0.23"
tree-sitter-c = "0.23"
tree-sitter-cpp = "0.23"
tree-sitter-c-sharp = "0.23"
tree-sitter-php = "0.23"
tree-sitter-rust = "0.23"
tree-sitter-bash = "0.23"
sha2 = "0.10"
rayon = "1.10"
ignore = "0.4"
regex = "1"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = 3
